--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <!-- Our webpack bundle -->
-    <script src="~/dist/main-client.js" asp-append-version="true"></script>
+    <script src="~/dist/client.js" asp-append-version="true"></script>
 }
